k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: boardgame
  name: boardgame-service
spec:
  selector:
    app: boardgame-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
