k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: boardgame.172.17.7.95.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boardgame-service
            port:
              number: 80
